# sgr

./: README.md  dla.py  dns_filter.py  policy.txt  utils.py
2011-2020/2012/mazzurco/pfringbalancer/: .gitignore  CMakeLists.txt
2011-2020/2012/mazzurco/pfringbalancer/doc/: CMakeLists.txt  Doxyfile.in
2011-2020/2012/mazzurco/pfringbalancer/doc/diagrams/: dispatch.dia
2011-2020/2012/mazzurco/pfringbalancer/doc/html/: BalOutIface_8cpp.html  BalOutIface_8cpp__incl.map  BalOutIface_8h.html  BalOutIface_8h__dep__incl.map  BalOutIface_8h__incl.md5  PacketDispatcher_8cpp.html  PacketDispatcher_8h.html  PacketDispatcher_8h__dep__incl.map  PacketDispatcher_8h__incl.map  PacketDispatcher_8h__incl.md5  PacketDispatcher_8h_source.html  annotated.html  classBPFRD_1_1BalOutIface.html  classBPFRD_1_1BalOutIface_a4f8c4bd06396ca6bfac3ba86cb9fb886_icgraph.map  classes.html  (+22 more)
2011-2020/2012/mazzurco/pfringbalancer/src/: BalOutIface.cpp  PacketDispatcher.h  main.cpp  mainpage.dox
2021/Argentieri/: 172.16.67.87_tengigabitethernet_1_7.rrd  CMakeLists.txt  README.md  array_list.c  array_list.h  main.c
2022/Malentacchi/: Cargo.toml  README.md  snmpfetch_config.toml
2022/Malentacchi/src/: main.rs
2022/Malentacchi/src/utils/: constants.rs  funcs.rs  mod.rs
2025/Ferrante/: .gitignore  CMakeLists.txt  Makefile
2025/Ferrante/rrds/127.0.0.1/: 1.rrd  10.rrd  11.rrd  12.rrd  13.rrd  14.rrd  15.rrd  16.rrd  17.rrd  18.rrd  19.rrd  2.rrd  20.rrd  21.rrd  22.rrd  3.rrd  4.rrd  5.rrd  6.rrd  7.rrd  8.rrd  9.rrd
2025/Ferrante/src/: Makefile  gentest.sh  port_similarity  port_similarity.c
2025/Ferrante/src/rrds/127.0.0.1/: 1.rrd  10.rrd  11.rrd  12.rrd  13.rrd  14.rrd  15.rrd  16.rrd  17.rrd  18.rrd  19.rrd  2.rrd  20.rrd  21.rrd  22.rrd  3.rrd  4.rrd  5.rrd  6.rrd  7.rrd  8.rrd  9.rrd
2025/Ferrante/src/rrds/193.37.138.128/: 1.rrd  10.rrd  11.rrd  12.rrd  13.rrd  14.rrd  15.rrd  16.rrd  17.rrd  18.rrd  19.rrd  2.rrd  20.rrd  21.rrd  22.rrd  23.rrd  24.rrd  25.rrd  26.rrd  27.rrd  28.rrd  29.rrd  3.rrd  30.rrd  31.rrd  32.rrd  33.rrd  34.rrd  35.rrd  36.rrd  37.rrd  38.rrd  39.rrd  4.rrd  40.rrd  41.rrd  42.rrd  43.rrd  44.rrd  45.rrd  (+56 more)
2025/Ferrante/src/rrds/200.58.174.254/: 1.rrd  10.rrd  11.rrd  12.rrd  13.rrd  14.rrd  15.rrd  16.rrd  17.rrd  18.rrd  19.rrd  2.rrd  20.rrd  21.rrd  22.rrd  3.rrd  4.rrd  5.rrd  6.rrd  7.rrd  8.rrd  9.rrd
2025/Ferrante/src/rrds/61.122.208.157/: 1.rrd  10.rrd  11.rrd  12.rrd  13.rrd  14.rrd  15.rrd  16.rrd  17.rrd  18.rrd  19.rrd  2.rrd  20.rrd  21.rrd  22.rrd  3.rrd  4.rrd  5.rrd  6.rrd  7.rrd  8.rrd  9.rrd
2025/Ferrante/src/utils/: macros.h
(+2265 files in other folders)
